--- a/src/generator/config/resources.yaml
+++ b/src/generator/config/resources.yaml
@@ -6,6 +6,8 @@
       crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api/main/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
     - name: Machine
       crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api/main/config/crd/bases/cluster.x-k8s.io_machines.yaml
+    - name: MachinePool
+      crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api/main/config/crd/bases/cluster.x-k8s.io_machinepools.yaml
     - name: KubeadmControlPlane
       crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api/main/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
 
@@ -25,6 +27,8 @@
       crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api-provider-aws/main/config/crd/bases/controlplane.cluster.x-k8s.io_awsmanagedcontrolplanes.yaml
     - name: AWSClusterRoleIdentity
       crdURL: https://raw.githubusercontent.com/kubernetes-sigs/cluster-api-provider-aws/main/config/crd/bases/infrastructure.cluster.x-k8s.io_awsclusterroleidentities.yaml
+    - name: KarpenterMachinePool
+      crdURL: https://raw.githubusercontent.com/giantswarm/aws-resolver-rules-operator/main/config/crd/bases/infrastructure.cluster.x-k8s.io_karpentermachinepools.yaml
 
 - group: capz
   resources:
